--- a/public/static/assets/css/index.css
+++ b/public/static/assets/css/index.css
@@ -5,8 +5,8 @@
   font-weight: 400;
   width: "100%";
   font-family: "Roboto", "Tajawal", sans-serif;
-  overflow: hidden;
-  overflow-y: auto;
+  /* overflow: hidden; */
+  /* overflow-y: auto; */
 }
 
 body {
