--- a/src/pages/_practices.astro
+++ b/src/pages/_practices.astro
@@ -3,7 +3,7 @@ import { useTranslations } from '@/i18n/utils';
 import Layout from '@/layouts/Layout.astro';
 import { getCollection } from 'astro:content';
 
-const { title, lang="en", slug } = Astro.props;
+const { title, lang="en", slug="practices" } = Astro.props;
 const t = useTranslations(lang);
 
 const featuredPractices = await getCollection("practices");
