--- a/src/pages/_updates.astro
+++ b/src/pages/_updates.astro
@@ -3,12 +3,14 @@ import { useTranslations } from '@/i18n/utils';
 import Layout from '@/layouts/Layout.astro';
 import { getCollection } from 'astro:content';
 
-const { title, lang="en", slug="about-us" } = Astro.props;
+const { title, lang="en", slug="updates" } = Astro.props;
 const t = useTranslations(lang);
 
 const articleList = await getCollection("articles");
 
-const articles = articleList.filter(entry => entry.slug.split("/").includes(lang)).sort((a,b) => new Date(b.data.date).getTime() - new Date(a.data.date).getTime());
+const updateList = articleList
+	.filter(entry => entry.slug.split("/").includes(lang)).
+	sort((a,b) => new Date(b.data.date).getTime() - new Date(a.data.date).getTime());
 
 const testimonialList = await getCollection("testimonials");
 
@@ -38,17 +40,20 @@ const testimonials = await Promise.all(testimonialList
 
     <div class="grid grid-cols-1 mt-10 gap-8 md:grid-cols-4">
 			{
-				articles.map(entry => (
-					<a href=`/articles/${lang}/${entry.slug}` class="article-container my-10 h-100 border-s border-neutral-500 transition duration-700 hover:shadow-2xl shadow-gray-950">
+				updateList.map(entry => (
+					<a class="article-container my-10 h-100 border-s border-neutral-500 transition duration-700 hover:shadow-2xl shadow-gray-950" 
+						href=`/updates/${entry.slug}`>
 						<div class="flex flex-col gap-3 text-white px-8 justify-between">
 							<img class="w-full max-w-xs object-cover" src={entry.data.image} alt="">          
 							<h3 class="article-Title text-lg mt-10">{entry.data.name}</h3>
 							<p class="text-base">{new Date(entry.data.date).toISOString().slice(0, 10)}</p> 
 						</div>
-					</a>
+					</a>				
 				))
 			}
       
+
+
     </div>
   </div>
   <div class="bg-neutral-100 p-6 md:p-12 lg:p-20">
@@ -72,7 +77,7 @@ const testimonials = await Promise.all(testimonialList
 						</p>
 					</div>
 					<div class="flex justify-start gap-3 ms-2 mt-4">
-						<img class="rounded-full h-12 w12" src="{{.Image}}" alt="" >
+						<img class="rounded-full h-12 w12" src={entry.data.image} alt="" >
 					
 						<div class="flex flex-col justify-center items-start text-sm">
 							<div class="text-neutral-700">
