--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -249,11 +249,12 @@ const enSlug = "/" + langSlug.replace(`${lang}/`, "en/", 1);
           <h4 class="text-xl opacity-30">{t("Contact us")}</h4>
           <h4 class="text-lg">{t("Address")}</h4>
           <address>
-            {t("Musa Ibn Nussair St,")}<br/>
-            {t("Siricon Building No.(8) 2nd Floor Back Entrance,")}<br/>
-            {t("Al Olaya 11372,")}<br/>
-            {t("Riyadh,")}<br/>
-            {t("Saudi Arabia")}<br/>
+            {t("Musa Ibn Nussair St")}<br/>
+            {t("Siricon Building No.8")}<br/>
+            {t("2nd Floor (Back Entrance)")}<br/>
+            {t("Al Olaya")}<br/>
+            {t("Riyadh 11372")}<br/>
+            {t("Kingdom of Saudi Arabia")}
           </address>
         </div>
         <div class="w-5/12">
@@ -268,7 +269,7 @@ const enSlug = "/" + langSlug.replace(`${lang}/`, "en/", 1);
             </div>
             <div class="flex-1 gap-x-3">
               <div><strong>{t("Email")}</strong></div>
-              <div>omar@alrasheedlaw.com</div>
+              <div>enquiries@alrasheedlaw.com</div>
             </div>
 
           </div>
@@ -282,9 +283,10 @@ const enSlug = "/" + langSlug.replace(`${lang}/`, "en/", 1);
           <div class="p-3 content-center w-32"><h4>{t("Featured as a Contributor in the Chambers Global Guide 2025")}</h4><img class="mt-4" src="/static/assets/images/chamberContribution.png" alt="img" /></div>
           <div class="p-3 content-center w-32"><h4>{t("Listed as a Ranked Firm in the Chambers Global Guide 2025")}</h4><img class="mt-4" src="/static/assets/images/chambersRankInLawfirm.png" alt="img" /></div>
           <div class="p-3 content-center w-32"><h4>{t("Listed as a Ranked Lawyer in the Chambers Global Guide 2025")}</h4><img class="mt-4" src="/static/assets/images/chambersRankInLawyer.png" alt="img"/></div>
-          <div class="p-3 content-center"><h4>{t("Members of the IBA since 2009")}           </h4><img class="mt-4 w-64" src="/static/assets/images/iba.png" alt="img"/></div>
-          <div class="p-3 content-center"><h4>{t("Members of Multilaw since 2013")}           </h4><img class="mt-4 w-64" src="/static/assets/images/multilaw.png" alt="img"/></div>
-          <div class="p-3 content-center"><h4>{t("Member of U.S.-Saudi Business Council")}    </h4><img class="mt-4 w-64" src="/static/assets/images/USSBC-w.png" alt="img"/></div>
+          <div class="p-3 content-center w-48"><h4>{t("Member of the IBA since 2009")}           </h4><img class="mt-4" src="/static/assets/images/iba.png" alt="img"/></div>
+          <div class="p-3 content-center w-48"><h4>{t("Member of Multilaw since 2013")}           </h4><img class="mt-4" src="/static/assets/images/multilaw.png" alt="img"/></div>
+          <div class="p-3 content-center w-48"><h4>{t("Member of U.S.-Saudi Business Council")}    </h4><img class="mt-4" src="/static/assets/images/USSBC-w.png" alt="img"/></div>
+          <div class="p-3 content-center w-48"><h4>{t("Board Member of the Saudi-UAE Business Council")}    </h4><img class="mt-4 w-64" src="/static/assets/images/Board-Member-of-the-Saudi-UAE-Business-Council.png" alt="img"/></div>      
         </div>
      
       <!-- Socials -->
