--- a/src/pages/_about-us.astro
+++ b/src/pages/_about-us.astro
@@ -24,7 +24,7 @@ const t = useTranslations(lang);
       {t("Law Office of Omar Al-Rasheed is a full-service Saudi Arabian law firm with international expertise. We deliver first class, efficient and integrated legal services. Our firm includes a team of veteran Saudi Arabian and internationally qualified lawyers who assist on a wide range of practice areas.")}
     </p>
 
-    <div class="grid gap-x-3 grid-cols-3 w-full md:w-8/12 ml-auto my-10">
+    <div class="grid gap-x-3 grid-cols-2 w-full md:w-7/12 ml-auto my-10">
       <!-- Stats -->
       <div class="space-y-3">
         <div class="text-4xl font-semibold text-[#D0222B] py-4 border-b border-[#AEAEAE]">15+</div>
@@ -33,10 +33,6 @@ const t = useTranslations(lang);
       <div class="space-y-3">
         <div class="text-4xl font-semibold text-[#D0222B] py-4 border-b border-[#AEAEAE]">80+</div>
         <div class="">{t("Practice Areas")}</div>
-      </div class="space-y-3">
-      <div class="space-y-3">
-        <div class="text-4xl font-semibold text-[#D0222B] py-4 border-b border-[#AEAEAE]">2023</div>
-        <div class="">{t("Shaping Vision 2030 projects")}</div>
       </div>
     </div>
 
@@ -46,9 +42,7 @@ const t = useTranslations(lang);
       <img class="w-full md:w-1/2 my-10 md:order-last" src="/static/assets/images/omar-alrasheed-2.png" />
       <div class="w-full md:w-1/2">
         <div class="uppercase my-3 text-xl text-[#343434]">{t("our leadership")}</div>
-        <p>{t("Our team is led by leading lawyer Omar Al-Rasheed, the most awarded and highly regarded lawyer in Saudi Arabia. He is known for his")}
-          {t("“hands-on”")}
-          {t("delivery and who always strives for excellence.")}
+        <p>{t("Led by our managing partner Omar Alrasheed since 2006, our team is guided by a commitment to proactive engagement and a relentless pursuit of excellence.")}
         </p>
       </div>
     </div>
