--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,8 +24,8 @@ const listPractices = featuredPractices.filter(entry => entry.data.featured && e
       <div class="banner">
         <div class="banner_content">
           <h1>
-            {t('Omar Al-Rasheed & Partners Law Firm')} <br />
-            <span class="banner_content_subtitle">{t('Leading Independent Law Firm')}</span>
+            {t('Omar Alrasheed Law Firm')} <br />
+            <span class="banner_content_subtitle">{t('The Leading Independent Saudi Practice')}</span>
           </h1>
         </div>
       </div>
@@ -40,12 +40,12 @@ const listPractices = featuredPractices.filter(entry => entry.data.featured && e
       <div class="local">
         <div class="title">
           <h2 style="font-size: revert;">
-            {t('Local Depth. International Expertise')}
+            {t('Global Reach. Expert Solutions.')}
           </h2>
         </div>
         <p>
-          {t('We are a full-service independent law firm with international expertise.')}
-          {t("We offer a broad multi-disciplinary practice, led by internationally trained experts.")}
+          {t('Recognized for our extensive local insight and comprehensive international proficiency, we are a premier independent law firm offering a wide array of legal services.')}
+          {t("Our dynamic, multi-disciplinary practice is comprised of distinguished professionals trained in various global jurisdictions, dedicated to delivering the highest level of expertise.")}
         </p>
       </div>
     </div>
