--- a/src/pages/[...slug].astro
+++ b/src/pages/[...slug].astro
@@ -5,6 +5,8 @@ import AboutUs from '@/pages/_about-us.astro'
 import Members from '@/pages/_members.astro'
 import Practices from '@/pages/_practices.astro'
 import Updates from '@/pages/_updates.astro'
+import ContactUs from '@/pages/_contact-us.astro';
+import JoinUs from '@/pages/_join-us.astro';
 import { defaultLang, languages } from '@/i18n/ui';
 
 // This function tells Astro to build a page for every entry in your content collection
@@ -15,6 +17,8 @@ export async function getStaticPaths() {
 		"practices",
 		"team",
 		"articles",
+		"contact-us",
+		"join-us",
 	];
 
 	let finalList = [
@@ -68,5 +72,18 @@ const pageName = slugParts.length == 1 ? "index" : slugParts[1];
 	pageName == "articles"
 	? <Updates lang={lang} slug={slug}>
 		</Updates>
+	: ""
+}
+{
+	pageName == "contact-us"
+	? <ContactUs lang={lang} slug={slug}>
+		</ContactUs>
+	: ""
+}
+
+{
+	pageName == "join-us"
+	? <JoinUs lang={lang} slug={slug}>
+		</JoinUs>
 	: ""
 }
