--- a/src/pages/_updates.astro
+++ b/src/pages/_updates.astro
@@ -41,10 +41,10 @@ const testimonials = await Promise.all(testimonialList
     <div class="grid grid-cols-1 mt-10 gap-8 md:grid-cols-4">
 			{
 				updateList.map(entry => (
-					<a class="article-container my-10 h-100 border-s border-neutral-500 transition duration-700 hover:shadow-2xl shadow-gray-950" 
+					<a class="article-container my-10 min-h-full  border-s border-neutral-500 transition duration-700 hover:shadow-2xl shadow-gray-950" 
 						href=`/updates/${entry.slug}`>
 						<div class="flex flex-col gap-3 text-white px-8 justify-between">
-							<img class="w-full max-w-xs object-cover" src={entry.data.image} alt="">          
+							<img class="w-full max-w-xs max-h-64 object-cover" src={entry.data.image} alt="">          
 							<h3 class="article-Title text-lg mt-10">{entry.data.name}</h3>
 							<p class="text-base">{new Date(entry.data.date).toISOString().slice(0, 10)}</p> 
 						</div>
