--- a/src/pages/_members.astro
+++ b/src/pages/_members.astro
@@ -25,8 +25,8 @@ const members = membersList
       {
 				members.map(entry => (
 					<a href=`/team/${entry.slug}` class="member-container">
-						<div class="w-full" style=`background-image:url('${entry.data.image}'); height: 500px; background-size: cover; background-position: center;` alt="">
-							<div style="background: rgba(255,255,255,0.5);padding: 5px 20px; margin: 10px; top: 412px; position: relative;">
+						<div class="w-full h-fit" style=`background-image:url('${entry.data.image}'); height: 500px; background-size: cover; background-position: center;` alt="">
+							<div style="background: rgba(255,255,255,0.5);padding: 5px 20px; margin: 10px; top: 400px; position: relative;">
 								<div style="font-size: 20px; font-weight: bold;" class="member-name">{entry.data.name}</div>
 								<div style="font-size: 18px;" class="member-job">{entry.data.job_title}</div>
 								<div style="display:none"></div>
