--- a/src/pages/updates/[...slug].astro
+++ b/src/pages/updates/[...slug].astro
@@ -53,8 +53,8 @@ const { Content } = await entry.render()
         })}</h5> -->
 
       </div>
-      <img class="w-8/10 lg:max-w-5xl" src={entry.data.image} alt="" />
-      <div class="w-full my-10 p-4 bg-[#d9d3d3] lg: max-w-4xl">
+      <img class="w-6/10 lg:max-w-5xl" src={entry.data.image} alt="" />
+      <div class="w-full my-10 p-4 text-lg lg: max-w-4xl">
           <Content>
       </div>
     </div>
