--- a/src/pages/_join-us.astro
+++ b/src/pages/_join-us.astro
@@ -14,7 +14,7 @@ const t = useTranslations(lang);
           src="/static/assets/images/joinus-1.png"
         /> -->
         <div class="flex items-center flex-col md:flex-row">
-          <p class="order-last text-white text-2xl">
+          <p class="order-last text-white text-2xl" style="color: #cccccc">
             {t("To ensure that we continue to deliver the highest standards of service, we only recruit the best lawyers, staff and students to be part of our team. We have strong ties with leading universities and are often the number one choice for applying candidates and students seeking internships, who regularly choose us over other local or international firms.")}
           </p>
           <img
